--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
     "next": "13.4.19",
     "postcss": "8.4.29",
     "prisma": "^5.3.1",
+    "query-string": "^8.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.11.0",
+    "react-spinners": "^0.13.8",
     "swiper": "^10.2.0",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2",
